--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -520,11 +520,11 @@ video {
 .mt-16 {
   margin-top: 4rem;
 }
-.mt-auto {
-  margin-top: auto;
-}
 .mt-9 {
   margin-top: 2.25rem;
+}
+.mt-auto {
+  margin-top: auto;
 }
 .flex {
   display: flex;
@@ -553,17 +553,14 @@ video {
 .w-\[312px\] {
   width: 312px;
 }
+.w-\[56px\] {
+  width: 56px;
+}
 .w-\[889px\] {
   width: 889px;
 }
 .w-full {
   width: 100%;
-}
-.w-\[\] {
-  width: ;
-}
-.w-\[208px\] {
-  width: 208px;
 }
 .max-w-1338px {
   max-width: 1338px;
@@ -582,6 +579,9 @@ video {
 }
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.flex-col {
+  flex-direction: column;
 }
 .flex-wrap {
   flex-wrap: wrap;
@@ -711,15 +711,6 @@ video {
 .pt-8 {
   padding-top: 2rem;
 }
-.pb-1 {
-  padding-bottom: 0.25rem;
-}
-.pb-8 {
-  padding-bottom: 2rem;
-}
-.pb-16 {
-  padding-bottom: 4rem;
-}
 .text-center {
   text-align: center;
 }
@@ -777,6 +768,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .top-card {
